tests/cases/compiler-development/artifact/errors/diagnostic-field-assignment-while-borrowed.diagnostic
diagnostic error code=O0001 family=ownership message="cannot assign to borrowed field 'pair.0'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-field-assignment-while-borrowed.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-field-assignment-while-borrowed.ari" bytes=242
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-field-assignment-while-borrowed.ari" line=13 column=8 end_line=13 end_column=12 byte_start=202 byte_end=206 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-field-assignment-while-borrowed.ari:13:8\n    |\n 13 |   pair.left = 3;\n    |        ^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-field-assignment-while-borrowed.ari" line=11 column=7 end_line=11 end_column=11 byte_start=128 byte_end=132 message="borrowed binding 'pair' was declared here"
  Snippet label=1 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-field-assignment-while-borrowed.ari:11:7\n    |\n 11 |   var pair = Pair { left: 1, right: 2 };\n    |       ^^^^"
  Note index=0 location=none message="borrow state is tracked for each binding and overlapping aggregate field"
  Help index=0 location=none message="end the overlapping borrow before assigning to this field"
